makes setting add useroption/profile more responsive and fixing bug at userOption and userManageOption pages(flex wrap center)

--- a/src/style/homeScreen/userOption/_settingUserOption.scss
+++ b/src/style/homeScreen/userOption/_settingUserOption.scss
@@ -1,7 +1,12 @@
 // the code for slider checkbox is underneath this chuck of class
+.outerMainContainer {
+  max-width: 95vw;
+  overflow: auto;
+}
+
 .settingUserOption {
   width: min(40rem, 95vw);
-  max-height: 80vh;
+  max-height: 85vh;
 
   h1, p, h6, h5 {
     margin: 0;
@@ -16,6 +21,7 @@
     height: 5rem;
     padding: 1rem;
     max-height: 20vh;
+    width: 100%;
 
     &__button {
       all: unset;
@@ -35,9 +41,10 @@
 
   &__main {
     gap: 0.3rem;
-    padding: 0 2rem 2rem 2rem;
-    max-height: 60vh;
-    overflow-y: auto;
+    padding: 0 clamp(1rem, 2vw + 0.5rem, 2rem) clamp(1rem, 2vw + 0.5rem, 2rem) clamp(1rem, 2vw + 0.5rem, 2rem);
+    max-height: 65vh;
+    min-width: 320px;
+    overflow: auto;
 
     &__br {
       height: 2rem;
@@ -45,7 +52,15 @@
     }
 
     &__kidsOption {
-      height: 8rem;
+      height: 10rem;
+
+      &__text {
+        width: fit-content;
+
+        h5, p {
+          width: fit-content;
+        }
+      }
     }
 
     &__btnSave, &__btnCancel {
@@ -80,8 +95,8 @@
 // Slider class for checkbox input
 .switch {
   position: relative;
-  display: inline-block;
-  width: 4rem;
+  display: block;
+  width: 3.5rem;
   height: 2rem;
 
   input {
@@ -105,7 +120,7 @@
     height: 1.5rem;
     width: 1.5rem;
     left: 0.3rem;
-    bottom: 0.2rem;
+    bottom: 0.25rem;
     background-color: rgb(32, 32, 32);
     transition: 0.2s;
     border-radius: 50%;
@@ -116,7 +131,7 @@ input:checked + .slider {
   background-color: rgb(64, 97, 231);
 
   &::before {
-    transform: translateX(1.9rem);
+    transform: translateX(1.45rem);
   }
 }
 
@@ -131,10 +146,10 @@ input:checked + .slider {
   &::after {
     content: '';
     position: absolute;
-    top: 0.8rem;
-    left: 0.1rem;
-    width: 0.8rem;
-    height: 0.1rem;
+    top: 0.725rem;
+    left: 0.04rem;
+    width: 0.9rem;
+    height: 0.15rem;
     background-color: rgb(150, 150, 150);;
     transition: 0.2s;
   }
@@ -145,7 +160,7 @@ input:checked + .slider {
 }
 
 input:checked + .slider + .checklist {
-  transform: translateX(1.9rem);
+  transform: translateX(1.5rem);
 
   &::before {
     background-color: rgb(64, 97, 231);
